# termseeker

./: .gitignore  LICENSE  README.md  UNDOC_aligner.ipynb  UN_Term_scraping.ipynb  __init__.py  file.ipynb  playground_termseeker.ipynb  pyproject.toml  requirements.txt  setup.py
UNDOC_aligner/src/: __init__.py  cli.py  main.py
UNDOC_aligner/src/un_library/: search.py
UNDOC_aligner/src/utils/: __init__.py  bilingual_aligner.py  clean_symbols.py  document_urls.py  find_paragraphs.py
src/: __init__.py  __main__.py  cli.py  convert.py  getCandidates.py
src/convert/: __init__.py  pdf_to_markdown.py  word_to_markdown.py
src/un_library/: __init__.py  extract.py  search.py
src/utils/: __init__.py
termseeker/: __init__.py  __main__.py  askTermBases.py  cli.py  convert.py  getcandidates.py  queryHFdatasets.py  searchlibrary.py  utils.py
termun/: __init__.py  cli.py  convert.py  getcandidates.py  searchlibrary.py  utils.py
