[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "termseeker"
version = "0.1.1"
description = "UN Terminology checker and corrector for parallel texts"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}
keywords = ["python", "terminology", "checker", "corrector"]
authors = [
  {name = "NelsonJQ"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sentence-transformers",
    "pymupdf4llm",
    "requests",
    "beautifulsoup4",
    "html2text",
    "markdown2",
    "scikit-learn",
    "duckduckgo-search",
    "polars",
    "xlsxwriter",
    "lingua-language-detector",
    "datasets",
    "huggingface-hub",
    "selenium"
]

[project.urls]
"Homepage" = "https://github.com/NelsonJQ/termseeker"

[project.scripts]
termseeker-cli = "termseeker.termseeker.__main__:getterms"
